# SMCS-project

./: .gitignore  CHANGELOG.md  README.md  gdp-dijkstra.cabal
LiquidHaskell/: README.md  gdp-dijkstra.cabal  lq-dijkstra.cabal
LiquidHaskell/src/: Dijkstra.hs  MinHeap.hs
agda/: README.md  dijkstra.agda  distance.agda  minheap.agda
default/src/: Dijkstra.hs
gdp/: LICENSE  README.md  gdp-dijkstra.cabal
gdp/src/: Dijkstra.hs  Examples.hs  MinHeap.hs
src/: Dijkstra.hs  MinHeap.hs
