cabal-version:      3.0
name:               gdp-dijkstra
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             Camobrie
maintainer:         bvmeggelen@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MinHeap
                    , Dijkstra

    other-modules:    

    build-depends:    base ^>=4.19.0.0
                    , gdp >= 0.0.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
